# remnant

./: .env.dev  .git-blame-ignore-revs  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  TestDockerfile  docker-compose.ci.yml  docker-compose.dev.yml  mkdocs.yml  pyproject.toml  requirements.txt  settings.gradle.kts
android-app/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
ansible/: ec2_setup.yml
api/: .env.dev  .gitignore  Makefile  README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
api/ansible/: install_docker.yml
api/web/: .pylintrc  Dockerfile  requirements.txt
api/web/src/appl/: __init__.py  auth.py  aws.py  config.py  generators.py  locations.py  models.py  postmark.py  responses.py  suggestions.py  user.py  validation.py  visit.py
api/web/src/appl/remnant_db/: admin_queries.py  location_queries.py  suggestion_queries.py  user_queries.py  visit_queries.py
api/web/src/tests/: conftest.py  constants.py  helpers.py  test_app.py  test_db.py  test_locations.py  test_suggestions.py  test_user.py  test_validators.py  test_visited_locations.py
app/: build.gradle.kts
docs/: Database.md  Group.md  index.md
documentation/: .prettierrc  README.md  mkdocs.yml
features/: basic_registration.md  geofence_usage.md  profile_questionnaire_change.md  profile_username_change.md  questionnaire.md
hs_backend/: __init__.py  config.py  routes.py  wsgi.py
scripts/: remove_entries_no_long_desc.sh
sources/: wikidata.json
tests/: __init__.py  atomic.py  requirements.txt  test_app.py  test_db.py  (+3 more)
(+241 files in other folders)
