[tool.poetry]
name = "hs-backend"
version = "0.1.0"
description = ""
authors = ["Erich Reitz <erich.reitz@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.1.1"
flask = "^3.0.1"
gunicorn = "^21.2.0"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
