[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Erich Reitz <erich.reitz@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.1.1"
flask = "^3.0.1"
gunicorn = "^21.2.0"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.6.0"
pylint = "^3.0.3"
pytest = "8.0.0"
psycopg2-binary = "^2.9.9"
flask-cors = "^4.0.0"
boto3 = "^1.34.70"
botocore = "^1.34.70"
requests = "^2.31.0"
filetype = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
